<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CommanderActivity"
    tools:showIn="@layout/activity_commander"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:id="@+id/schedule-movies_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/send-video-commands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/title_activity_video_commands" />

        <Button
            android:id="@+id/send-audio-commands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/title_activity_audio_commands" />

        <Button
            android:id="@+id/schedule-movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/content_schedule_movies"
            app:layout_constraintBottom_toTopOf="@+id/schedule-movies_outer" />

        <Button
            android:id="@+id/schedule-tv-shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/title_activity_schedule_tv_shows" />

        <Button
            android:id="@+id/schedule-music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/title_activity_schedule_music" />

        <Button
            android:id="@+id/schedule-audio-book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:text="@string/title_activity_schedule_audio_book" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>